Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p><strong>Can play with computer or another human</strong>
-<img src="http://image.bayimg.com/ec3838f809b6fb77ac58bfece07ea119984ad83a.jpg" alt="Interactive"></p>
+<img src="http://imageshack.com/a/img14/3887/u1py.png" alt="Interactive"></p>
 
 <p><strong>Can write your own bot and check if it wins</strong>
-<img src="http://image.bayimg.com/a585ea6ac0e0c19bdfd7a3d90be0e2bc716ed4a9.jpg" alt="Sandbox"></p>
+<img src="http://imageshack.com/a/img703/1948/6w3e.png" alt="Sandbox"></p>
 
 <p><strong>Can look at how your bot is thinking</strong>
-<img src="http://image.bayimg.com/1ce3f27757491950e6d7cf9a02fe65aaefdf47c8.jpg" alt="Shell"></p>
+<img src="http://imageshack.com/a/img27/490/4fuz.png" alt="Shell"></p>
       </section>
     </div>
 
