--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bacteria : The game" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Bacteria by klumba12</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Bacteria</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Bacteria</h1>
+        <p>The game</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/klumba12/bacteria">View on GitHub</a>
+        <p class="view"><a href="https://github.com/klumba12/bacteria">View the Project on GitHub <small>klumba12/bacteria</small></a></p>
 
-          <h1 id="project_title">Bacteria</h1>
-          <h2 id="project_tagline">The game</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/klumba12/bacteria/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/klumba12/bacteria/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/klumba12/bacteria/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/klumba12/bacteria/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/klumba12/bacteria">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p><strong>Can play with computer or another human</strong>
 <img src="http://imageshack.com/a/img14/3887/u1py.png" alt="Interactive"></p>
 
@@ -40,17 +37,12 @@
 <p><strong>Can look at how your bot is thinking</strong>
 <img src="http://imageshack.com/a/img27/490/4fuz.png" alt="Shell"></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bacteria maintained by <a href="https://github.com/klumba12">klumba12</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/klumba12">klumba12</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
